5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1756_1183.log
== SUBMITION (2019-05-29 13:10:13) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.198097
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:10:20) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.204546
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:10:20) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.191556
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:10:30) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.176507
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:00) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.231216
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:08) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.179472
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:08) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.153253
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:09) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.170485
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:38) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.149165
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:12:15) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.166646
-- ERROR:
  File "/home/codebench/codes/1756/1183/main.py", line 7
    if (vec[i] >= 0):http://codebench.icomp.ufam.edu.br/index.php?r=usuario%2Fview&id=3986
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:12:58) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.494944
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:00) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.308937
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:07) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
0.434776
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[1]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[2 3 5]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:08) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
1.05564
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:08) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
2.35742
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:09) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
2.89244
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:09) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
3.16175
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:13:09) 
-- CODE:
from numpy import *

vec = array(eval(input("vetor de numeros")))
i = 0
pos = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		pos += 1
	i += 1

vec2 = zeros(pos, dtype = int)
i = 0
j = 0
while (i < size(vec)):
	if (vec[i] >= 0):
		vec2[j] = vec[i]
		j += 1
	i += 1
print(vec2)
-- EXECUTION TIME:
3.18468
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[18 32 14 25]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
